# Skynet

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Readme.md  build.rs  build.sh  push.sh
docs/: genenerate.sh  generator-config.json  openapi.yml  rust-generator-config.json
docs/web/: index.html
frontend/: Cargo.toml  index.html
frontend/src/: main.rs  servers.rs
kubernetes/: pod-monitor.yaml  rbac.yaml  skynet_updater.yml
migrations/: 0_initial_model.cql  10_game_stats_rev.cql  11_auto_punish.cql  12_echo.cql  1_queues.cql  2_online_count.cql  3_game_stats.cql  4_discord_link.cql  5_maintenance_override.cql  6_webhooks.cql  7_mutes.cql  8_playercount_for_servers.cql  999_groups.cql  9_server_kind_startup.cql
src/: main.rs
src/database/: api_keys.rs  bans.rs  discord.rs  discord_link.rs  mod.rs  mutes.rs  players.rs  queries.rs  sanctions.rs  servers.rs  sessions.rs  stats.rs
src/digitalocean/: mod.rs
src/kubernetes/: autoscale.rs  autoscaler.rs  controller.rs  mod.rs  servers.rs  templates.rs
src/messenger/: mod.rs  online_count.rs  receiver.rs  sender.rs  servers_events.rs
src/structures/: discord.rs  metrics.rs  mod.rs  players.rs
src/utils/: apocalypse_builder.rs  message.rs  mod.rs  property_handler.rs  proxycheck.rs
src/web/: discord.rs  echo.rs  login.rs  metrics.rs  mod.rs  players.rs  proxy.rs  registration.rs  rejections.rs  server.rs  sessions.rs  stats.rs  status.rs
