[package]
name = "skynet"
version = "0.1.0"
authors = ["Guillaume ETHEVE <admin@guillaume-etheve.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3.17"

# RestApi
warp = "0.3.1"
reqwest = { version = "0.11", features = ["json"] }

# Serialisation
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.69"
serde_yaml = "0.8.21"

# Database
scylla = "0.3.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
bigdecimal = "0.3.0"
num-bigint = "0.4.3"
chrono = { version = "0.4.19", features = ["serde"] }

# Messenger
tokio-amqp = "1.0.0"
lapin = "1.9.0"
byte = "0.2.6"

# Kubernetes
kube = { version = "0.64.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_22"] }
kube-leader-election = "0.4.0"
json-patch = "0.2.6"

# Error handling
anyhow = "1.0.45"
thiserror = "1.0.30"

# Logging
tracing = "0.1.0"
tracing-subscriber = { version = "0.3.1", features = ["env-filter"] }
tracing-log = "0.1.2"