[package]
name = "skynet"
version = "0.1.0"
authors = ["Guillaume ETHEVE <admin@guillaume-etheve.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.59.2"
codegen = "0.1.3"
regex = "1.5.4"

[dependencies]

#Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3.19"

# RestApi
warp = "0.3.2"
reqwest = { version = "0.11.9", features = ["json"] }

# Serialisation
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
serde_yaml = "0.8.23"

# Database
scylla = "0.3.1"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
bigdecimal = "0.3.0"
num-bigint = "0.4.3"
chrono = { version = "0.4.19", features = ["serde"] }

# Messenger
tokio-amqp = "1.0.1"
lapin = "1.9.0"
byte = "0.2.6"

# Kubernetes
kube = { version = "0.65.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_22"] }
kube-leader-election = "0.5.3"
json-patch = "0.2.6"

# Error handling
anyhow = "1.0.52"
thiserror = "1.0.30"

# Logging
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
tracing-log = "0.1.2"

# Utils
strum = "0.23.0"
strum_macros = "0.23.1"
rand = "0.8.4"
async-trait = "0.1.52"