[package]
name = "skynet"
version = "0.1.0"
authors = ["Guillaume ETHEVE <admin@guillaume-etheve.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[build-dependencies]
bindgen = "0.60.1"
codegen = "0.1.3"
regex = "1.5.4"

[dependencies]

#Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3.21"
async-recursion = "1.0.0"

# RestApi
warp = "0.3.2"
reqwest = { version = "0.11.9", features = ["json"] }

# Serialisation
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.9.11"

# Database
scylla = "0.5.0"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
bigdecimal = "0.3.0"
num-bigint = "0.4.3"
chrono = { version = "0.4.19", features = ["serde"] }

# Messenger
tokio-executor-trait = "2.1.0"
lapin = "2.0.3"
byte = "0.2.6"

# Kubernetes
kube = { version = "0.74.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.15.0", default-features = false, features = ["v1_22"] }
kube-leader-election = "0.14.0"
json-patch = "0.2.6"

# Error handling
anyhow = "1.0.55"
thiserror = "1.0.30"

# Logging
tracing = "0.1.31"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
tracing-log = "0.1.2"

# Utils
strum = "0.24.0"
strum_macros = "0.24.0"
rand = "0.8.5"
async-trait = "0.1.52"
itertools = "0.10.3"
humantime = "2.1.0"

# Prometheus
prometheus = { version = "0.13.1" }