[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

yew = "0.19.3"
js-sys = "0.3.57"
web-sys = "0.3.57"

yew-router = "0.16.0"
uuid = { version = "1.0.0", features = ["serde", "v4"] }